--- a/estiloform.css
+++ b/estiloform.css
@@ -1,4 +1,3 @@
-
 *,
 *:before,
 *:after {
@@ -119,24 +118,7 @@ fieldset{
 a{
     text-decoration: none;
 }
-/*atributos del boton volver*/
-/* .retorno{
-    width: 4.5vw;
-    text-align: center;
-    background-color: black;
-    margin-top: 3%;
-    margin-left: 90%;
-    border: 2px solid #ffb13a;
-    padding: 1%;
-    border-radius: 5px;
-    box-shadow: 1px 1px 3px blue, 5px 5px 3px whitesmoke, 10px 10px 3px  #ffb13a;
-    
-}
-.back {
-    color:  #ffb13a;
-    font-size: 1vw;
-    text-align: center;
-} */
+
 #error {
     color: #ffb13a;
    
@@ -164,7 +146,7 @@ span{
 #map{
     position: absolute;
     margin-left: 55vw;
-    width: 40vw;
+    width: 37vw;
     height: 53.5vh;
     border: 2px solid darkgray;
     border-radius: 20px;
@@ -172,4 +154,22 @@ span{
 p{
     margin-top: -1vw;
     margin-left: 10vw;
+}
+
+.fondo{
+    display: flex;
+    background-image: url("");
+    background-position: left;
+}
+img{
+    margin: auto;
+    display: block;
+}
+p{
+    position: absolute;
+    color:#ffb13a;
+    font-size: larger;
+    text-align: center;
+    margin-left: 65.5vw;
+    
 }
