--- a/styles2.css
+++ b/styles2.css
@@ -1,19 +1,23 @@
 * {
     color: beige;
 }
-
+a{
+    text-decoration: none;
+}
 html {
     background-image: url(../img/productos/Star-Wars-night-planet-space-sky-Earth-632864-wallhere.com.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
 
- p{
+ .ptext{
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 1.3rem;
     padding: 13px;
     text-align: center;
+    color: beige;
 }
+
 .contenedor{
     width: min(95%, 120rem);
     margin: 0 auto;
@@ -31,9 +35,7 @@ html {
     
     margin: 80px; 
     border-radius: 6px;
-    /* box-shadow: 2px 4px 40px rgb(0, 0, 0, 0,3); */
     cursor: default;
-    /* transition: all 400ms ease; */
     
  }
 /* .conte:hover{
@@ -89,20 +91,22 @@ html {
 
 .boton{
     position:relative; 
-    display: inline-block;
-    padding: 15px 30px; /*este es el pbolema */
-    color: rgb(0, 0, 0);
+    display:inline-block;
+    padding: 7px 28px; 
+    color: #000000;
     letter-spacing: 4px;
     font-size: 24px;
-    text-decoration: none;
+    /* text-decoration: none; */
     overflow: hidden;
     transition: 0.2s;
 }
 /* .boton:hover{
-    color: #da0606;
-    box-shadow: 0 0 10px #da0606, 0 0 30px #da0606, 0 0 60px #da0606;
+    border-radius: 4px;
+    color: #000000;
+    box-shadow: 0 0 10px #0a0a0a, 0 0 30px #000000, 0 0 60px #640101;
     transition-delay: 1s;
-}   */
+ } */
+  
 
 .boton span{
     position: absolute;
@@ -245,7 +249,7 @@ los textos mas transparentes, y agregar boton adentro neon */
 }
 
 .logo__nombre{
-
+color:beige;
 }
 
 .barra{
@@ -269,7 +273,7 @@ los textos mas transparentes, y agregar boton adentro neon */
  .navegacion__enlace{
      display: block;
      text-align: center;
-     color: var(--blanco);
+     color: beige;
      font-size: 1.5rem;
  }
  
@@ -391,4 +395,14 @@ color: #ffb13a;
 #foto4,
 #foto5{
     padding-left: 1.5rem;
+}
+
+.comprar{
+    color: #000;
+    font-size: 2rem;
+}
+
+.audio{
+   padding-left: 7rem;
+   
 }
